--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -60,6 +60,14 @@
             // width: ;
             margin-top: 5rem;
         }
+        .form-field-error {
+            border: 2px solid red;
+        }
+        .form-error-message {
+            font-size: 1.2rem;
+            color: red;
+            transform: translateY(5px);
+        }
     }
 
     @media (max-width: 425px) {
