--- a/src/pages/Home/Card.scss
+++ b/src/pages/Home/Card.scss
@@ -1,5 +1,6 @@
 .Card {
-    width: 27.6rem;
+    // width: 27.6rem;
+    width: 29rem;
     &__image-container {
         height: 15rem;
         background-color: black;
