--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,4 +10,16 @@
     outline: none;
     border: none;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    &__spinner {
+        height: 2rem;
+        margin-left: 1rem;
+    }
+
+    &__text {
+    }
 }
