--- a/src/pages/Home/Register.scss
+++ b/src/pages/Home/Register.scss
@@ -26,6 +26,7 @@
         border: none;
         background-color: $color-black;
         color: $color-white;
+        cursor: pointer;
     }
 
     @media (max-width: 322px) {
