--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -80,6 +80,13 @@
         margin-bottom: 5rem;
     }
 
+    &__error {
+        color: red;
+        font-size: 1.2rem;
+        text-align: center;
+        margin-top: 1.5rem;
+    }
+
     @media (max-width: 681px) {
         margin-bottom: 10rem;
 
