--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -1,4 +1,8 @@
-$color-white: #fff;
-$color-black: #000;
+$color-white-high: rgba(255, 255, 255, 0.8);
+$color-white-medium: rgba(255, 255, 255, 0.6);
+$color-white-low: rgba(255, 255, 255, 0.33);
+$color-black: #121212;
 $color-blue: #03dfc9;
 $color-yellow: #ffbb07;
+$color-elevated: rgba(255, 255, 255, 0.1);
+$color-red: #cc3c44;
