--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 .Footer {
     padding: 4.3rem 0;
     background-color: $color-black;
-    color: $color-white;
+    color: $color-white-high;
     text-align: center;
     font-size: 1.4rem;
 }
