--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -7,7 +7,8 @@
 
     &__title {
         margin-bottom: 6.7rem;
-        text-align: center;
+        color: $color-white-high;
+
         span {
             display: block;
         }
@@ -36,11 +37,14 @@
             width: 100%;
             padding: 1.6rem;
             border-radius: 4px;
-            border: 1px solid $color-black;
             font-size: 1.6rem;
             font-style: normal;
             font-weight: bold;
             box-sizing: border-box;
+            background-color: $color-elevated;
+            border: none;
+            color: $color-white-medium;
+            outline: none;
         }
         textarea {
             min-height: 14rem;
@@ -55,17 +59,18 @@
             font-size: 16px;
             margin-bottom: 1.3rem;
             display: block;
+            color: $color-white-high;
         }
         .form-btn-container {
             // width: ;
-            margin-top: 5rem;
+            margin-top: 3rem;
         }
         .form-field-error {
-            border: 2px solid red;
+            border: 1px solid $color-red;
         }
         .form-error-message {
             font-size: 1.2rem;
-            color: red;
+            color: $color-red;
             transform: translateY(5px);
         }
     }
