--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,3 +1,5 @@
+@import '../../assets/sass/variables.scss';
+
 .Navbar {
     width: 90%;
     margin: 0 auto;
@@ -36,8 +38,8 @@
 
     &__item-link {
         text-decoration: none;
-        color: black;
-        font-weight: 500;
+        color: $color-white-high;
+        font-weight: bold;
     }
 
     @media (max-width: 425px) {
