--- a/src/pages/Home/Card.scss
+++ b/src/pages/Home/Card.scss
@@ -1,11 +1,13 @@
+@import '../../assets/sass/variables.scss';
+
 .Card {
     // width: 27.6rem;
     width: 29rem;
     &__image-container {
         height: 15rem;
-        background-color: black;
+        // background-color: black;
         overflow: hidden;
-        box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.25);
+        // box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.25);
         border-radius: 8px;
         margin-bottom: 2rem;
     }
@@ -14,12 +16,15 @@
         height: 100%;
         object-fit: cover;
         object-position: center;
+        opacity: 0.95;
     }
     &__title {
         font-size: 1.6rem;
         margin-bottom: 2rem;
+        color: $color-white-high;
     }
     &__description {
         font-size: 1.4rem;
+        color: $color-white-medium;
     }
 }
