--- a/src/pages/Home/Register.scss
+++ b/src/pages/Home/Register.scss
@@ -1,32 +1,36 @@
 @import '../../assets/sass/variables.scss';
 
 .Register {
-    background-color: $color-white;
+    background-color: $color-elevated;
     width: fit-content;
-    margin: 0 auto;
-    border-radius: 2rem;
+    // margin: 0 auto;
+    border-radius: 4px;
     overflow: hidden;
     border: none;
-    box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.25);
+    // box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.25);
 
     input {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         padding: 1rem 1.5rem;
-        border-radius: 2rem 0 0 2rem;
+        border-radius: 4px 0 0 4px;
         border: none;
         outline: none;
         width: 15rem;
         min-width: 0;
+        background-color: transparent;
+        color: $color-white-medium;
+        font-weight: bold;
     }
 
     button {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         padding: 1rem 1.5rem;
-        border-radius: 2rem;
+        border-radius: 4px;
         border: none;
-        background-color: $color-black;
-        color: $color-white;
+        background-color: $color-yellow;
+        color: $color-black;
         cursor: pointer;
+        font-weight: bolder;
     }
 
     @media (max-width: 322px) {
