--- a/src/pages/Home/SolveCard.scss
+++ b/src/pages/Home/SolveCard.scss
@@ -1,3 +1,5 @@
+@import '../../assets/sass/variables.scss';
+
 .SolveCard {
     max-width: 31.4rem;
 
@@ -14,9 +16,11 @@
         font-weight: 700;
         margin-bottom: 1.5rem;
         max-width: 20rem;
+        color: $color-white-high;
     }
 
     &__description {
         font-size: 1.4rem;
+        color: $color-white-medium;
     }
 }
